force-app/main/default/objects/Hung_Setting__mdt/Hung_Setting__mdt.object-meta.xml
<CustomObject>
    <description>test custom setting</description>
    <label>Hung Setting</label>
    <pluralLabel>Hung Settings</pluralLabel>
</CustomObject>