force-app/main/default/objects/Hung_Setting__mdt/fields/ckBox__c.field-meta.xml
<CustomField>
        <fullName>ckBox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>ckBox Desc</description>
        <label>ckBox</label>
        <type>Checkbox</type>
    </CustomField>