force-app/main/default/objects/Hung_Setting__mdt/fields/myList__c.field-meta.xml
<CustomField>
        <fullName>myList__c</fullName>
        <label>myList</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                    <default>true</default>
                    <label>a</label>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>