force-app/main/default/objects/Hung_Setting__mdt/fields/myNum__c.field-meta.xml
<CustomField>
        <fullName>myNum__c</fullName>
        <label>myNum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>