force-app/main/default/objects/Hung_Setting__mdt/fields/MyText__c.field-meta.xml
<CustomField>
        <fullName>MyText__c</fullName>
        <label>MyText</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>