force-app/main/default/objects/Hung_Setting__mdt/fields/txtHung__c.field-meta.xml
<CustomField>
        <fullName>txtHung__c</fullName>
        <description>txt</description>
        <label>Text Hung</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>