force-app/main/default/objects/Hung_Setting__mdt/listViews/Hung.listView-meta.xml
<ListView>
        <fullName>Hung</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <columns>myList__c</columns>
        <columns>myNum__c</columns>
        <columns>MyText__c</columns>
        <filterScope>Everything</filterScope>
        <label>Hung</label>
    </ListView>